# stdssg

./: CMakeLists.txt  Makefile  README.md
src/: cli.cpp  cli.hpp  main.cpp  site_builder.cpp  site_builder.hpp  stdssg.hpp
